# devtools

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
src/: App.test.tsx  App.tsx  index.css  registry.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: GeneratedFileButton.tsx  HistoryMenu.tsx  JsonTree.tsx  OpenFileInputProvider.tsx  SettingsPanel.tsx  ui.tsx
src/core/: clipboard.test.ts  clipboard.ts  convert.ts  core.test.ts  cron.ts  crypto.ts  desktop-config.test.ts  desktop.test.ts  desktop.ts  detect.test.ts  detect.ts  encoding.ts  files.test.ts  files.ts  formats.ts  generatedFile.test.ts  generatedFile.ts  hash.ts  highlight.test.ts  highlight.ts  id.ts  json.ts  jsonPath.test.ts  jsonPath.ts  jwt.ts  mock.ts  native-controls.test.ts  network.ts  rsa.ts  sanitize.test.ts  sanitize.ts  text.ts  time.ts  toml.ts
src/hooks/: asyncProcess.test.ts  history.test.ts  settings.test.ts  useAsyncProcess.ts  useLatestOperation.test.ts  useLatestOperation.ts  useLocalStorage.ts  useProcessMode.ts  useSettings.ts  useTheme.test.tsx  useTheme.ts  useToolHistory.ts
src/tools/: convert.tsx  crypto.tsx  encoding.tsx  formats.tsx  json.tsx  misc.tsx  text.tsx  time.tsx  tools.smoke.test.tsx
